--- a/net/fspclient/Makefile.in
+++ b/net/fspclient/Makefile.in
@@ -14,8 +14,8 @@ INSTALL_DATA = @INSTALL_DATA@
 
 DEFS = @DEFS@
 
-CFLAGS = -g
-LDFLAGS = $(CFLAGS)
+CFLAGS = -O2
+LDFLAGS = -s
 LIBS = @LIBS@
 
 prefix = /usr/local
@@ -68,5 +68,8 @@ PackageClient:
 	@cd ..;\
 	 echo "running \`fspclient/package.client fsp' in `pwd`";\
 	 fspclient/package.client fspclient
+
+package: install
+	pkg_create -c pkg/+ONELINE -d pkg/+DESC -f pkg/+PLIST fspclient_bin
 
 #############################################################################
