--- a/util/wine/wine.ini
+++ b/util/wine/wine.ini
@@ -1,22 +1,23 @@
 
 [drives]
-A=/flop0
-B=/dummy
+A=/mnt/fd0
 C=/dos
+D=/usr/windows
+E=/home/bob/wine/work
+F=/home/bob/test
 
 [wine]
 Windows=c:\windows
 System=c:\windows\system
 Temp=c:\temp
-Path=c:\windows;c:\windows\system
-SystemResources=./sysres.dll
+Path=c:\windows;c:\windows\system;e:\;e:\test;f:\
 
 [serialports]
-Com1=/dev/sio00
-Com4=/dev/sio01
+Com1=/dev/cua0
+Com2=/dev/cua1
 
 [parallelports]
-Lpt1=/dev/lpa0
+Lpt1=/dev/lp0
 
 [spy]
-Exclude=WM_TIMER;WM_SETCURSOR;WM_MOUSEMOVE;WM_NCHITTEST;WM_NCACTIVATE;WM_GETDLGCODE;
+Exclude=WM_SIZE;WM_TIMER;
