--- a/lang/tclX/src/Makefile
+++ b/lang/tclX/src/Makefile
@@ -14,7 +14,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: Makefile,v 1.1 1994/02/09 01:53:45 jkh Exp $
+# $Id: Makefile,v 1.2 1994/07/05 14:13:36 ache Exp $
 #------------------------------------------------------------------------------
 #
 SHELL = /bin/sh
@@ -26,8 +26,8 @@ CC          = cc
 RANLIB      = ranlib
 MCS         = touch
 srcdir      = .
-srcbasedir  = /usr1/FreeBSD.ports/lang/tclX
-bldbasedir  = /usr1/FreeBSD.ports/lang/tclX
+srcbasedir  = /usr/ports/lang/tclX
+bldbasedir  = /usr/ports/lang/tclX
 VPATH       = .
 prefix      = /usr/local
 exec_prefix = /usr/local
