--- a/lang/tclX/tktclsrc/Makefile
+++ b/lang/tclX/tktclsrc/Makefile
@@ -13,7 +13,7 @@
 # software for any purpose.  It is provided "as is" without express or
 # implied warranty.
 #------------------------------------------------------------------------------
-# $Id: Makefile,v 1.1 1994/02/09 01:54:19 jkh Exp $
+# $Id: Makefile,v 1.2 1994/07/05 14:13:49 ache Exp $
 #------------------------------------------------------------------------------
 #
 SHELL=/bin/sh
@@ -22,8 +22,8 @@ SHELL=/bin/sh
 # Autoconfig defines that can be overridden in Config.mk
 
 srcdir            = .
-srcbasedir        = /usr1/FreeBSD.ports/lang/tclX
-bldbasedir        = /usr1/FreeBSD.ports/lang/tclX
+srcbasedir        = /usr/ports/lang/tclX
+bldbasedir        = /usr/ports/lang/tclX
 VPATH             = .
 prefix            = /usr/local
 exec_prefix       = /usr/local
