--- a/shell/tcsh/imake.config
+++ b/shell/tcsh/imake.config
@@ -1,5 +1,5 @@
 /**/#
-/**/# $Id: imake.config,v 1.1 1993/07/20 10:48:47 smace Exp $
+/**/# $Id: imake.config,v 1.1.1.2 1994/07/05 20:37:47 ache Exp $
 /**/#
 /**/# config.Imakefile for for tcsh 6.00
 /**/# Marc Horowitz, MIT SIPB
@@ -39,6 +39,9 @@ this, but it shouldn't hurt. */
 
 /* define if you have Hesiod passwd information, and want tcsh to use it */
 /* #define HESIOD */
+
+/* define if you have AFS and want to use kerberos passwd authentication */
+/* #define AFS */
 
 /* defines installation dir if different from /usr/local.  The
 executable will be put in TcshTop/bin/tcsh, and the man page in
