--- a/shell/tcsh/Makefile.vms
+++ b/shell/tcsh/Makefile.vms
@@ -1,5 +1,5 @@
-# $Id: Makefile.vms,v 1.1 1993/07/20 10:48:47 smace Exp $
-#	Makefile	4.3	6/11/83
+# $Id: Makefile.vms,v 1.1.1.2 1994/07/05 20:37:56 ache Exp $
+#	Makefile.vms	4.3	6/11/83
 #
 # C Shell with process control; VM/UNIX VAX Makefile
 # Bill Joy UC Berkeley; Jim Kulp IIASA, Austria
@@ -8,7 +8,7 @@
 # things; Paul Placeway, CIS Dept., Ohio State University
 #
 SHELL=/bin/sh
-VERSION=6.04
+VERSION=6.05
 BUILD=tcsh
 
 ################################################################
@@ -46,7 +46,7 @@ LFLAGS=$(INCLUDES)
 #CFLAGS=-O $(INCLUDES)
 
 # gcc-2.1+
-#CFLAGS=-O2 $(INCLUDES)
+#CFLAGS=-O2 $(INCLUDES) -g
 
 # lucid c on suns
 #CFLAGS=-O5 $(INCLUDES)
@@ -84,8 +84,14 @@ LFLAGS=$(INCLUDES)
 # Stardent Stellar or sunos4 /bin/cc or Solaris2.1 /opt/SUNWspro/bin/cc
 #CFLAGS = $(INCLUDES) -O4
 
+# Intergraph clipper CLIX 3.1
+#CFLAGS= -w -O2 $(INCLUDES)
+
 # Dnix 5.3
 #CFLAGS = -O -X7
+
+# Pyramid OS/x
+#CFLAGS = -OG
 
 # Apollo's with cc [apollo builtins don't work with gcc]
 # and apollo should not define __STDC__ if it does not have
@@ -105,10 +111,11 @@ LFLAGS=$(INCLUDES)
 # DEC/osf-1 on the alpha
 #DFLAGS=-D_BSD
 DFLAGS=
+#DFLAGS=-D_PATH_TCSH='"${DESTBIN}/tcsh"'
 
 
 ################################################################
-## LDLAGS.  Define something here if you need to
+## LDFLAGS.  Define something here if you need to
 ################################################################
 LDFLAGS= 			## The simplest, suitable for all.
 #LDFLAGS= -s			## Stripped. Takes less space on disk.
@@ -128,16 +135,16 @@ LDFLAGS= 			## The simplest, suitable for all.
 #LIBES= -ltermcap -lcs			 ## Mach
 #LIBES= -ltermcap -lsec			 ## Tek XD88/10 (UTekV) with PW_SHADOW
 #LIBES= -ltermcap -lsec			 ## Motorola MPC (sysV88) with PW_SHADOW
+#LIBES= -ltermcap -lshadow		 ## Linux
 #LIBES= -ltermcap -lbsd			 ## DEC osf1 on the alpha
 #LIBES= -ltermcap -lbsd			 ## Intel paragon
 #LIBES= -ltermcap -lseq			 ## Sequent's Dynix
 #LIBES= -ltermcap -lauth		 ## Ultrix with Enhanced Security
 #LIBES= -ltermcap -ldir -lx		 ## Xenix 386 style things
 #LIBES= -ltermcap -lndir -lsocket -ljobs ## masscomp RTU6.0
-#LIBES= -ltermc				 ## emx under OS/2
 #LIBES= -lcurses			 ## AIX on the rt
 #LIBES= -lcurses			 ## TitanOS on the stellar
-#LIBES= -lcurses			 ## SysV4 w/o BSDTIMES or Solaris 2
+#LIBES= -ltermlib -lsocket -lnsl	 ## SysV4 w/o BSDTIMES or Solaris 2
 #LIBES= -lcurses			 ## SysV3 w/o networking
 #LIBES= -lcurses -lnet			 ## SysV3 with networking
 #LIBES= -lcurses -ldir			 ## SysV2 w/o networking & dirlib
@@ -160,10 +167,32 @@ LDFLAGS= 			## The simplest, suitable for all.
 #LIBES= -lposix -ltermcap -lc_s		 ## A/UX 3.0
 #LIBES= -ldirent -lcurses		 ## att3b1 cc w/o shared lib & dirlib
 #LIBES= -shlib -ldirent -lcurses	 ## att3b1 gcc with shared lib & dirlib
-#LIBES= -lcurses -lc /usr/ucblib/libucb.a		 ## SysV4 with BSDTIMES
+#LIBES= -ltermlib -lsocket -lnsl -lc /usr/ucblib/libucb.a ## SysV4 with BSDTIMES
 #LIBES= -lcurses -lnsl -lsocket -lc /usr/ucblib/libucb.a ## Stardent Vistra
 #LIBES= -ltermc				 ## emx under OS/2
 LIBES=					 ## Minix, VMS_POSIX
+
+################################################################
+## EXTRAFLAGS and EXTRALIBS
+################################################################
+# Compiling for HESIOD
+#HESDEF = -DHESIOD -I/usr/athena/include
+#HESLIB = -L/usr/athena/lib -lhesiod
+HESDEF=
+HESLIB=
+#
+# Compiling for AFS with kerberos authentication
+#AFSLIBDIR = /usr/afsws/lib
+#AFSDEF = -DAFS -I/usr/afsws/include
+#AFSLIB = -L$(AFSLIBDIR) -L$(AFSLIBDIR)/afs -lkauth -lprot -lubik\
+#         -lauth -lrxkad -lsys -ldes -lrx -llwp -lcom_err\
+#         $(AFSLIBDIR)/afs/util.a
+#
+AFSDEF=
+AFSLIB=
+
+EXTRAFLAGS = $(HESDEF) $(AFSDEF)
+EXTRALIBS = $(HESLIB) $(AFSLIB)
 
 
 # The difficult choice of a c-compiler...
@@ -181,6 +210,8 @@ LIBES=					 ## Minix, VMS_POSIX
 #CC=	cc
 #CC=	occ
 #CC=	acc
+#CC=	pcc
+#CC=	hc -w
 CC=	c89	# For VMS/POSIX
 #CC=	/bin/cc	# For suns, w/o gcc and SVR4
 #CC=	/usr/lib/sun.compile/cc  # FPS 500 (+FPX) with Sun C compiler
@@ -235,8 +266,8 @@ TCSRCS= tc.alloc.c tc.bind.c tc.const.c tc.decls.h tc.disc.c \
 	tc.func.c tc.os.c tc.os.h tc.printf.c tc.prompt.c \
 	tc.sched.c tc.sig.c tc.sig.h tc.str.c sh.types.h tc.vers.c tc.wait.h \
 	tc.who.c tc.h
-TCOBJS=	tc.alloc.${SUF} tc.bind.${SUF} tc.const.${SUF} tc.disc.${SUF} \
-	tc.func.${SUF} tc.os.${SUF} tc.printf.${SUF} \
+TCOBJS=	tc.alloc.${SUF} tc.bind.${SUF} tc.const.${SUF} tc.defs.${SUF} \
+	tc.disc.${SUF} tc.func.${SUF} tc.os.${SUF} tc.printf.${SUF} \
 	tc.prompt.${SUF} tc.sched.${SUF} tc.sig.${SUF} tc.str.${SUF} \
 	tc.vers.${SUF} tc.who.${SUF} 
 
@@ -244,10 +275,12 @@ PVSRCS= Makefile.std Makefile.vms
 AVSRCS= Fixes MAKEDIFFS MAKESHAR NewThings README FAQ \
 	WishList config_f.h eight-bit.me glob.3 patchlevel.h \
 	pathnames.h tcsh.man Ported src.desc Imakefile imake.config \
-	README.imake complete.tcsh vmsreadme.txt termcap.vms snames.h
+	README.imake complete.tcsh vmsreadme.txt termcap.vms snames.h \
+	host.defs gethost.c
+
 VHSRCS=${PVSRCS} ${AVSRCS}
 
-CONFSRCS=config/config.* 
+CONFSRCS=config/* 
 
 ALLSRCS=  ${SHSRCS} ${TWSRCS} ${EDSRCS} ${TCSRCS} ${VHSRCS}
 DISTSRCS= ${PSSRCS} ${TWSRCS} ${EDSRCS} ${TCSRCS} ${AVSRCS}
@@ -260,15 +293,24 @@ all: ${BUILD}
 
 tcsh:$(P) ${OBJS} 
 	rm -f tcsh core
-	${CC} -o tcsh ${LDFLAGS} ${CFLAGS} ${OBJS} ${LIBES}
+	${CC} -o tcsh ${LDFLAGS} ${CFLAGS} ${OBJS} ${LIBES} ${EXTRALIBS}
 
 # Purify
 pure:$(P) ${OBJS} 
 	rm -f tcsh core
-	purify `echo ${CC} | sed -e s,-B/bin/,,` -o tcsh ${LDFLAGS} ${CFLAGS} ${OBJS} ${LIBES}
+	purify `echo ${CC} | sed -e s,-B/bin/,,` -o tcsh ${LDFLAGS} ${CFLAGS} ${OBJS} ${LIBES} ${EXTRALIBS}
 # OS/2
 tcsh.exe: tcsh
 	emxbind tcsh
+
+gethost:  gethost.c sh.err.h tc.const.h sh.h
+	rm -f gethost
+	${CC} -o gethost ${LDFLAGS} ${CFLAGS} gethost.c ${LIBES} ${EXTRALIBS}
+
+tc.defs.c:	gethost host.defs
+	@rm -f $@
+	@echo "/* Do not edit this file, make creates it */" > $@
+	./gethost host.defs >> $@
 
 tcsh.ps: tcsh.man
 	rm -f tcsh.ps
@@ -276,13 +318,13 @@ tcsh.ps: tcsh.man
 
 
 #.c.${SUF}:
-#	${CC} ${CF} ${CFLAGS} ${DFLAGS} $<
+#	${CC} ${CF} ${CFLAGS} ${DFLAGS} ${EXTRAFLAGS} $<
 
 # _VMS_POSIX #module addition
 .c.${SUF}:
 	@(echo '\#module '`echo $< | sed -e 's/\./_/g'`; cat $<) > $*..c
-	@echo ${CC} ${CF} ${CFLAGS} ${DFLAGS} $*.c
-	@${CC} ${CF} ${CFLAGS} ${DFLAGS} $*..c
+	@echo ${CC} ${CF} ${CFLAGS} ${DFLAGS} ${EXTRAFLAGS} $*.c
+	@${CC} ${CF} ${CFLAGS} ${DFLAGS} ${EXTRAFLAGS} $*..c
 	@mv $*..o $*.o
 	@rm -f $*..c
 
@@ -318,7 +360,7 @@ ed.defns.h: ed.defns.c
 	@echo '/* Do not edit this file, make creates it. */' > $@
 	@echo '\#ifndef _h_ed_defns' >> $@
 	@echo '\#define _h_ed_defns' >> $@
-	grep '[FV]_' ed.defns.c | grep '\#define' >> $@
+	grep '[FV]_' ed.defns.c | grep '^\#define' >> $@
 	@echo '\#endif /* _h_ed_defns */' >> $@
 
 sh.err.h: sh.err.c
@@ -326,7 +368,7 @@ sh.err.h: sh.err.c
 	@echo '/* Do not edit this file, make creates it. */' > $@
 	@echo '\#ifndef _h_sh_err' >> $@
 	@echo '\#define _h_sh_err' >> $@
-	grep 'ERR_' sh.err.c | grep '\#define' >> $@
+	grep 'ERR_' sh.err.c | grep '^#define' >> $@
 	@echo '\#endif /* _h_sh_err */' >> $@
 
 tc.const.h: tc.const.c sh.char.h config.h config_f.h sh.types.h sh.err.h
@@ -336,7 +378,7 @@ tc.const.h: tc.const.c sh.char.h config.h config_f.h sh.types.h sh.err.h
 	@echo '\#define _h_tc_const' >> $@
 	${CC} -E $(INCLUDES) ${DFLAGS} -D_h_tc_const tc.const.c | \
 	    grep 'Char STR' | \
-	    sed -e 's/Char \([a-zA-Z0-9_]*\)\(.*\)/extern Char \1[];/' | \
+	    sed -e 's/Char \([a-zA-Z0-9_]*\)\[\].*/extern Char \1[];/' | \
 	    sort >> $@
 	@echo '\#endif /* _h_tc_const */' >> $@
 
@@ -383,26 +425,26 @@ install: tcsh
 	-strip ${DESTBIN}/tcsh
 	chmod 555 ${DESTBIN}/tcsh
 
-manpage: tcsh.man
+install.man: tcsh.man
 	-rm -f ${DESTMAN}/tcsh.${MANSECT}
 	cp tcsh.man ${DESTMAN}/tcsh.${MANSECT}
 	chmod 444 ${DESTMAN}/tcsh.${MANSECT}
 
 # Amiga Unix
-#manpage: tcsh.man
+#install.man: tcsh.man
 #        compress tcsh.man
 #	cp tcsh.man.Z ${DESTMAN}/tcsh.Z
 #	chmod 444 ${DESTMAN}/tcsh.Z
 
 # Apple A/UX
-#manpage: tcsh.man
+#install.man: tcsh.man
 #	-rm -f ${DESTMAN}/tcsh.${MANSECT}.Z
 #	nroff -man tcsh.man | compress > ${DESTMAN}/tcsh.${MANSECT}.Z
 #	chmod 444 ${DESTMAN}/tcsh.${MANSECT}.Z
 
 clean:
-	${RM} -f a.out strings x.c xs.c tcsh tcsh.a _MAKE_LOG core
-	${RM} -f *.${SUF} sh.prof.c ed.defns.h tc.const.h sh.err.h
+	${RM} -f a.out strings x.c xs.c tcsh tcsh.a _MAKE_LOG core gethost
+	${RM} -f *.${SUF} sh.prof.c ed.defns.h tc.const.h sh.err.h tc.defs.c
 
 veryclean: clean
 	${RM} -f *~ #*
@@ -512,3 +554,6 @@ glob.${SUF} sh.glob.${SUF}: glob.h
 # ed.defns.h
 EDDINC=tc.bind.${SUF} tc.func.${SUF} tc.os.${SUF}
 ${EDOBJS} ${EDDINC}: ed.defns.h
+
+# tc.defs.o
+tc.defs.${SUF}:	tc.defs.c sh.h
